--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ header h1{
     color:red;
 }
 header h2{
-    margin-top:0px;
+    margin-top:0px; 
 }
 header p{
     font-weight: lighter;
@@ -48,6 +48,10 @@ header p{
 }
 header,article{
     color: var(--color-title);
+}
+.markup{
+    background-color:#e1e1e1;
+    color:var(--color-title);
 }
 section li a,section li p{
     color: #c1c1c1;
@@ -63,6 +67,8 @@ ul{
     list-style-type: none;
     justify-content: space-evenly;
     padding:0;
+    margin:0;
+    margin-top:20px;
 }
 ul p{
     font-size:20px;
